ags (0.9.18)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed ags-oscillator-list restore failed due to typo

ags (0.9.17)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed read of not finished write buffer during export audio file
	* fixed AgsExportWindow file exists response
	* fixed AgsExportWindow dead-lock during cancel of not existing playback
	* improved gsequencer.desktop to provide png file

ags (0.9.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* provide context menu

ags (0.9.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved gtk-doc installation and introduced fix-local-html and fix-online-html target
	* fixed missing check for NULL of gtk_combo_box_text_append_text() parameter in all source code
	* fixed missing LV2_UI cleanup handling
	* fixed missing pulseaudio backend in AgsExportSoundcard

ags (0.9.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_pulse_port_get_latency()
	* improved throughput of pulseaudio by timed cond on stream request callback
	* fixed possible SIGSEGV as ags_channel_reset_recall_id()

ags (0.9.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved ags_devout_adjust_delay_and_attack() and related
	* improved AgsPulsePort to omit polling thread twice
	* fixed missing volatile of AgsPollingThread's flags
	* fixed destroy machine crash during playback

ags (0.9.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* added mutices to AgsJackServer and AgsPulseServer
	* fixed memory leaks of mutices in AgsPulseClient, AgsJackClient, AgsPulsePort and AgsJackPort
	* fixed wrong parent class of dispose in ags_pulse_server.c and ags_jack_server.c
	* fixed data-race during playback termination in ags_pulse_devout_port_free()
	* fixed ags_application_context initialization if NULL (note might be reverted, soon)

ags (0.9.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]