@@ -1,3 +1,10 @@
+ags (0.9.19)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* provide quadratic and practical icon size
+	* improved pulseaudio underflow detection
+	* fixed pulseaudio non-initialized value might be a buffer-overflow
+
 ags (0.9.18)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
